<resources>
    <string name="app_name">移动巡检</string>
    <string name="imageDescription">Image</string>

    <!-- common -->
    <string name="sex_male">男</string>
    <string name="sex_female">女</string>
    <string name="prompt_login_again">请重新登录</string>

    <!-- splash -->
    <string name="splash_usePhone_button">使用手机号登录</string>

    <!-- login -->
    <string name="title_activity_login">登录</string>
    <string name="prompt_phone">手机号码</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="error_invalid_phone">手机长度为11位</string>
    <string name="error_invalid_password">密码长度不少于4位</string>
    <string name="error_incorrect_password">密码错误或账户不存在</string>
    <string name="error_field_required">必填</string>
    <string name="error_unknown">发生了未知的错误</string>

    <!-- main -->
    <string name="title_activity_main">移动巡检</string>
    <string name="title_home">主页</string>
    <string name="title_members">人员</string>
    <string name="title_me">我的</string>
    <string name="prompt_press_back">再按一次返回键退出</string>

    <!-- vHome -->
    <string name="prompt_executing">执行中</string>
    <string name="prompt_waiting">待执行</string>
    <string name="prompt_finished">已完成</string>
    <string name="prompt_device">设备</string>
    <string name="prompt_message">信息</string>
    <string name="prompt_main_device">设备：</string>
    <string name="prompt_main_creator">创建者：</string>
    <string name="prompt_main_publish_time">创建时间：</string>
    <string name="prompt_main_due_time">完成期限：</string>
    <string name="prompt_main_assignee">委托人：</string>
    <string name="prompt_start_exe">开始执行</string>
    <string name="prompt_finish">完成任务</string>
    <string name="title_task_info">任务详细</string>
    <string name="prompt_task_no_due">无期限</string>
    <string name="prompt_main_state">状态：</string>
    <string name="prompt_task_id">任务ID：</string>
    <string name="prompt_checked">检查完成</string>
    <string name="prompt_position">位置：</string>
    <string name="prompt_issue">问题：</string>
    <string name="prompt_device_id">设备ID：</string>
    <string name="title_task_device">任务设备</string>
    <string name="prompt_picture">现场照片：</string>
    <string name="prompt_checked_time">检查时间：</string>
    <string name="prompt_unchecked">未检查</string>
    <string name="prompt_create_task">创建任务</string>
    <string name="prompt_task_title">任务主题</string>
    <string name="prompt_task_desc">任务描述</string>
    <string name="prompt_due_time_reject">期限时间不能在现在的时间之前</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="prompt_title_length">标题长度不小于3字符</string>
    <string name="prompt_description_length">描述不小于5字符</string>
    <string name="prompt_to_myself">任命给自己</string>
    <string name="install_baidu_map">请安装百度地图</string>
    <string name="my_position">我的位置</string>
    <string name="prompt_take_picture">请拍一张现场照片</string>
    <string name="prompt_please_check_devices">请先完成所有设备的检查</string>
    <string name="prompt_create_issue">提交新问题</string>
    <string name="prompt_issue_title">标题</string>
    <string name="prompt_issue_desc">问题描述</string>
    <string name="issue">问题</string>
    <string name="close_issue">关闭问题</string>
    <string name="prompt_relate_task">相关任务ID：</string>
    <string name="create_device">添加设备</string>
    <string name="device_name">设备名称</string>
    <string name="device_desc">设备描述</string>
    <string name="device_name_nonnull">设备名称不能为空</string>
    <string name="me">个人信息</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="change_password">修改密码</string>
    <string name="leader">上级</string>
    <string name="logout">注销</string>
    <string name="unwrote">未填写</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="new_password_again">再次输入新密码</string>
    <string name="prompt_password_disagree">两次输入密码不一致</string>
    <string name="prompt_edit_success">修改成功</string>
    <string name="edit_email">修改邮箱</string>
    <string name="email">邮箱</string>
    <string name="email_invalid">邮箱格式不正确</string>
    <string name="add_member">添加人员</string>
    <string name="birthday">出生日期</string>
    <string name="name_too_long">名字长度过长</string>
    <string name="user_exists">手机号已被注册</string>
    <string name="details">详细信息</string>
    <string name="prompt_sex">性别：</string>
    <string name="prompt_email">邮箱：</string>
    <string name="prompt_birthday">出生日期：</string>
    <string name="prompt_doing">正在执行：</string>
    <string name="prompt_leader">上级：</string>
    <string name="call">拨打电话</string>
    <string name="prompt_trace">轨迹：</string>
</resources>
