<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#55FFFFFF"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:elevation="3dp"
        android:padding="10dp">

        <Button
            android:id="@+id/create_button"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_member"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/create_button"
            android:layout_marginBottom="10dp"
            android:scrollbars="none">

            <com.zhy.android.percent.support.PercentLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="5dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp"
                    android:layout_marginTop="@dimen/activity_vertical_margin">

                    <com.zhy.android.percent.support.PercentLinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:orientation="vertical"
                        android:background="?android:selectableItemBackground">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/name"
                                android:inputType="text"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:textSize="15sp"/>

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/phone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_phone"
                                android:inputType="phone"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:textSize="15sp"/>

                        </android.support.design.widget.TextInputLayout>

                    </com.zhy.android.percent.support.PercentLinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="5dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp"
                    android:layout_marginTop="@dimen/activity_vertical_margin">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:orientation="vertical"
                        android:background="?android:selectableItemBackground">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:text="@string/sex"/>

                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp">

                            <RadioButton
                                android:id="@+id/sex_male"
                                android:checked="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sex_male" />

                            <RadioButton
                                android:id="@+id/sex_female"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sex_female"/>
                        </RadioGroup>

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="5dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp"
                    android:layout_marginTop="@dimen/activity_vertical_margin">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:orientation="vertical"
                        android:background="?android:selectableItemBackground">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:text="@string/birthday"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"/>

                        <ImageButton
                            android:id="@+id/birthday_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_time"
                            android:background="?android:selectableItemBackground"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentTop="true"
                            android:contentDescription="@string/imageDescription" />

                        <TextView
                            android:id="@+id/birthday"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_below="@id/birthday_btn" />

                    </RelativeLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="5dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp"
                    android:layout_marginTop="@dimen/activity_vertical_margin">

                    <com.zhy.android.percent.support.PercentLinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:orientation="vertical"
                        android:background="?android:selectableItemBackground">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/email"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:textSize="15sp"/>

                        </android.support.design.widget.TextInputLayout>

                    </com.zhy.android.percent.support.PercentLinearLayout>
                </android.support.v7.widget.CardView>

            </com.zhy.android.percent.support.PercentLinearLayout>

        </ScrollView>

    </RelativeLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/add_member"
        app:titleTextColor="@android:color/white">

    </android.support.v7.widget.Toolbar>

</com.zhy.android.percent.support.PercentRelativeLayout>